Fix a crash when viewing recurring iCalendar events in kmail body. New strings are needed for this bugfix. sorry.

Due to the new strings I don't think we can backport this (maybe it
could be done with some tricks to avoid new strings).

Enterprise branches should want this.

BUG: 177946
CCMAIL: kde-i18n-doc@kde.org

svn path=/trunk/KDE/kdepimlibs/; revision=898357